// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba de componente <GifGrid /> debe de mostrar correctamente por pantalla  1`] = `
<Fragment>
  <h3
    className="animate__animated animate__shakeY"
  >
     
    Messi
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Prueba de componente <GifGrid /> debe de mostrar items cuando se cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__shakeY"
  >
     
    Messi
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquiercosa"
      url="https://localhost/juanma/cosa.jpg"
    />
  </div>
</Fragment>
`;
